[package]
name = "bee-node"
version = "0.2.1"
authors = [ "IOTA Stiftung" ]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "node" ]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = [ "auth" ] }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = [ "workers" ] }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-network = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = [ "full" ] }
bee-protocol = { path = "../bee-protocol" }
bee-rest-api = { path = "../bee-api/bee-rest-api", features = [ "endpoints" ] }
bee-runtime = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-storage = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-storage-rocksdb = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true }
bee-storage-sled = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }

anymap = "0.12.1"
async-trait = "0.1.51"
cap = { version = "0.1.0", optional = true }
chrono = "0.4.19"
console-subscriber = { git = "https://github.com/tokio-rs/console.git", branch = "main", optional = true }
futures = "0.3.17"
fxhash = "0.2.1"
hex = "0.4.3"
iota-crypto = { version = "0.7.0", features = [ "ed25519", "random", "blake2b" ] }
log = "0.4.14"
mime_guess = { version = "2.0.3", optional = true }
multiaddr = "0.13.0"
rand = "0.8.4"
rpassword = "5.0.1"
rumqttd = "0.8.0"
rumqttlog = "0.8.0"
rust-embed = { version = "6.2.0", features = [ "interpolate-folder-path" ], optional = true }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"
serde_repr = { version = "0.1.7", optional = true }
structopt = { version = "0.3.23", default-features = false }
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
tokio-stream = "0.1.7"
toml = "0.5.8"
tracing = { version = "0.1.29", optional = true }
tracing-subscriber = { version = "0.2.25", features = [ "fmt", "registry", "env-filter" ], optional = true }
warp = "0.3.1"
warp-reverse-proxy = { version = "0.4.0", optional = true }

[lib]
name = "bee_node"
path = "src/lib.rs"

[[bin]]
name = "bee"
path = "src/main.rs"

[features]
default = [ "rocksdb" ]

tokio-console = [ "console-subscriber", "tokio/tracing", "tracing", "tracing-subscriber", "bee-common/tokio-console" ]
dashboard = [ "cap", "mime_guess", "rust-embed", "serde_repr", "warp-reverse-proxy" ]
rocksdb = [ "bee-storage-rocksdb" ]
sled = [ "bee-storage-sled" ]
