[package]
name = "bee-node"
version = "0.3.0-rc4"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Default node implementations."
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "node" ]
homepage = "https://www.iota.org"

[dependencies]
bee-autopeering = { version = "0.4.0", path = "../bee-network/bee-autopeering", default-features = false, features = [ "rocksdb" ] }
bee-common = { version = "0.6.0", path = "../bee-common/bee-common", default-features = false }
bee-gossip = { version = "0.4.0", path = "../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
bee-ledger = { version = "0.6.1", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
bee-message = { version = "0.1.6", path = "../bee-message", default-features = false }
bee-protocol = { version = "0.2.0", path = "../bee-protocol", default-features = false, features = [ "workers" ] }
bee-rest-api = { version = "0.2.0", path = "../bee-api/bee-rest-api", default-features = false, features = [ "endpoints", "peer" ] }
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false }
bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", default-features = false }
bee-storage-null = { version = "0.1.0", path = "../bee-storage/bee-storage-null", default-features = false }
bee-storage-rocksdb = { version = "0.5.0", path = "../bee-storage/bee-storage-rocksdb", default-features = false, optional = true }
bee-storage-sled = { version = "0.4.0", path = "../bee-storage/bee-storage-sled", default-features = false, optional = true }
bee-tangle = { version = "0.2.0", path = "../bee-tangle", default-features = false }

anymap = { version = "0.12.1", default-features = false }
async-trait = { version = "0.1.51", default-features = false }
auth-helper = { version = "0.1.0", default-features = false }
cap = { version = "0.1.0", default-features = false, optional = true }
chrono = { version = "0.4.19", default-features = false }
ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
fern-logger = { version = "0.5.0", default-features = false }
futures = { version = "0.3.17", default-features = false }
fxhash = { version = "0.2.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "random", "blake2b" ] }
log = { version = "0.4.14", default-features = false }
mime_guess = { version = "2.0.3", default-features = false, optional = true }
multiaddr = { version = "0.13.0", default-features = false }
paho-mqtt = { version = "0.9.1", default-features = false, features = [ "bundled" ] }
pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
rand = { version = "0.8.4", default-features = false }
rpassword = { version = "5.0.1", default-features = false }
rust-embed = { version = "6.2.0", default-features = false, features = [ "interpolate-folder-path" ], optional = true }
serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.68", default-features = false }
serde_repr = { version = "0.1.7", default-features = false, optional = true }
structopt = { version = "0.3.23", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
tokio-stream = { version = "0.1.7", default-features = false }
toml = { version = "0.5.8", default-features = false }
tracing = { version = "0.1.29", default-features = false, optional = true }
warp = { version = "0.3.1", default-features = false }
warp-reverse-proxy = { version = "0.4.0", default-features = false, optional = true }

[build-dependencies]
reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "json" ] }
serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.68", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
zip = { version = "0.5.13", default-features = false, features = [ "bzip2", "deflate" ] }

[lib]
name = "bee_node"
path = "src/lib.rs"

[[bin]]
name = "bee"
path = "src/main.rs"

[features]
default = [ "rocksdb" ]

dashboard = [ "cap", "mime_guess", "rust-embed", "serde_repr", "warp-reverse-proxy" ]
rocksdb = [ "bee-storage-rocksdb" ]
sled = [ "bee-storage-sled" ]
