[package]
name = "bee-peering"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "peering"]
homepage = "https://www.iota.org"

[dependencies]
bee-network = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }

async-trait = "0.1"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive" ] }
