[package]
name = "bee-plugin"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2018"
description = "The bee node API for plugins"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "plugin" ]
homepage = "https://www.iota.org"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
async-trait = "0.1"

[dependencies]
bee-event-bus = { path = "../bee-common/bee-event-bus" }

log = "0.4"
prost = "0.8"
thiserror = "1.0"
tonic = "0.5"
tokio = { version = "1.6", features = [ "macros", "rt-multi-thread", "process", "sync", "fs" ] }
tokio-stream = "0.1"
