[package]
name = "bee-pow"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Provides Proof of Work utilities for the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "pow" ]
homepage = "https://www.iota.org"

[dependencies]
bee-ternary = { version = "0.6.0", default-features = false }

iota-crypto = { version = "0.9.2", default-features = false, features = [ "blake2b", "digest", "curl-p" ] }
thiserror = { version = "1.0.30", default-features = false }
trace-tools = { version = "0.3.0", default-features = false, optional = true }
tracing = { version = "0.1.29", default-features = false, optional = true }

[dev-dependencies]
bee-test = { path = "../bee-test", default-features = false }

[features]
default = [ ]
trace = [ "trace-tools/tokio-console", "tracing" ]
