[package]
name = "bee-pow"
version = "1.0.0-alpha.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Provides Proof of Work utilities for the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "pow" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bee-ternary = { version = "1.0.0-alpha.1", default-features = false }

iota-crypto = { version = "0.13.0", default-features = false, features = [ "blake2b", "digest", "curl-p" ] }
thiserror = { version = "1.0.31", default-features = false }

[dev-dependencies]
bee-test = { path = "../bee-test", default-features = false }
