[package]
name = "bee-protocol"
version = "0.1.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "All types and workers enabling the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "protocol" ]
homepage = "https://www.iota.org"

[dependencies]
bee-autopeering = { version = "0.1.0", path = "../bee-network/bee-autopeering", default-features = false }
bee-gossip = { version = "0.3.0", path = "../bee-network/bee-gossip", default-features = false }
bee-message = { version = "0.1.6", path = "../bee-message", default-features = false, features = [ "serde" ] }
