[package]
name = "bee-protocol"
version = "0.2.2"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "All types and workers enabling the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "protocol" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bee-autopeering = { version = "0.5.0", path = "../bee-network/bee-autopeering", default-features = false }
bee-block = { version = "0.1.0", path = "../bee-block", default-features = false, features = [ "serde" ] }
bee-gossip = { version = "0.6.0", path = "../bee-network/bee-gossip", default-features = false }
bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false, features = [ "workers" ], optional = true }
bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false, optional = true }
bee-storage = { version = "0.12.0", path = "../bee-storage/bee-storage", default-features = false, optional = true }
bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false, optional = true }

async-channel = { version = "1.6.1", default-features = false, optional = true }
async-priority-queue = { version = "0.1.1", default-features = false, optional = true }
async-trait = { version = "0.1.53", default-features = false, optional = true }
futures = { version = "0.3.21", default-features = false, optional = true }
futures-util = { version = "0.3.17", default-features = false, optional = true }
fxhash = { version = "0.2.1", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, optional = true }
log = { version = "0.4.17", default-features = false, optional = true }
num_cpus = { version = "1.13.1", default-features = false, optional = true }
packable = { version = "0.3.3", default-features = false }
parking_lot = { version = "0.12.0", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
ref-cast = { version = "1.0.7", default-features = false, optional = true }
serde = { version = "1.0.137", default-features = false, features = [ "derive" ]}
thiserror = { version = "1.0.31", default-features = false, optional = true }
tokio = { version = "1.18.2", default-features = false, features = [ "rt-multi-thread" ], optional = true }
tokio-stream = { version = "0.1.8", default-features = false, optional = true }
twox-hash = { version = "1.6.1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.18.2", default-features = false, features = [ "macros" ] }

[features]
workers = [
  "bee-gossip/full",
  "bee-ledger",
  "bee-runtime",
  "bee-storage",
  "bee-tangle",
  "async-channel",
  "async-priority-queue",
  "async-trait",
  "futures",
  "futures-util",
  "fxhash",
  "hex",
  "log",
  "num_cpus",
  "parking_lot",
  "rand",
  "ref-cast",
  "thiserror",
  "tokio",
  "tokio-stream",
  "twox-hash",
]
