[package]
name = "bee-runtime"
version = "0.1.1-alpha"
authors = [ "IOTA Stiftung" ]
edition = "2018"
description = "Runtime components and utilities for the bee framework"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "runtime" ]
homepage = "https://www.iota.org"

[dependencies]
bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", default-features = false }

async-trait = { version = "0.1.51", default-features = false }
dashmap = { version = "4.0.2", default-features = false }
futures = { version = "0.3.17", default-features = false, features = [ "std", "alloc" ] }
log = { version = "0.4.14", default-features = false, features = [ "serde" ] }
tokio = { version = "1.12.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", default-features = false, features = [ "rt", "macros", "time" ] }
