[package]
name = "bee-runtime"
version = "0.1.1-alpha"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Runtime components and utilities for the bee framework"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "runtime" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bee-storage = { version = "0.12.0", path = "../bee-storage/bee-storage", default-features = false }

async-trait = { version = "0.1.53", default-features = false }
dashmap = { version = "4.0.2", default-features = false }
futures = { version = "0.3.21", default-features = false, features = [ "std", "alloc" ] }
log = { version = "0.4.17", default-features = false, features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.18.2", default-features = false, features = [ "rt", "macros", "time" ] }
