[package]
name = "bee-signing"
version = "0.1.1-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "IOTA signing primitives"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "signing"]
homepage = "https://www.iota.org"

[dependencies]
bee-common-derive = { version = "0.1.1-alpha", path = "../bee-common/bee-common-derive" }
bee-crypto = { version = "0.2.0-alpha", path = "../bee-crypto" }
bee-ternary = { version = "0.4.0-alpha", path = "../bee-ternary" }

rand = "0.7"
sha3 = "0.9"
thiserror = "1.0"
zeroize = "1.1"
