[package]
name = "bee-signing"
version = "0.2.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "IOTA signing primitives"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "signing" ]
homepage = "https://www.iota.org"

[dependencies]
bee-common-derive = { version = "0.1.1-alpha", path = "../bee-common/bee-common-derive", default-features = false }
bee-crypto = { version = "0.3.0", path = "../bee-crypto", default-features = false }
bee-ternary = { version = "0.5.2", default-features = false }

rand = { version = "0.8.4", default-features = false, features = [ "std", "std_rng" ] }
sha3 = { version = "0.9.1", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
zeroize = { version = "1.4.2", default-features = false }
