[package]
name = "bee-snapshot"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "snapshot"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
bee-storage = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }

async-trait = "0.1"
bytemuck = "1.2"
chrono = "0.4"
dashmap = "3.10"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.10", features = ["stream"] }
serde = { version = "1.0", features = ["derive" ] }
tokio = "0.2"
