[package]
name = "bee-snapshot"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "snapshot"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-ledger = { path = "../bee-ledger" }
bee-message = { path = "../bee-message" }
bee-runtime = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-storage = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }

async-trait = "0.1"
bytemuck = "1.2"
chrono = "0.4"
dashmap = "4.0"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.10", features = ["stream"] }
serde = { version = "1.0", features = ["derive" ] }
thiserror = "1.0"
tokio = "0.2"
