[package]
name = "bee-tangle"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "A distributed, directed, acyclic graph that underpins the DLT for IOTA's Bee node"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework" ]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { version = "0.5.0", path = "../bee-common/bee-common", default-features = false }
bee-message = { version = "0.2.0", path = "../bee-message", default-features = false, features = [ "serde1" ] }
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false }
bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", default-features = false }

async-trait = { version = "0.1.51", default-features = false }
bitflags = { version = "1.2.1", default-features = false }
futures = { version = "0.3.17", default-features = false }
hashbrown = { version = "0.11.2", default-features = false, features = [ "raw", "ahash" ] }
log = { version = "0.4.14", default-features = false }
rand = { version = "0.8.4", default-features = false, features = [ "std", "std_rng" ] }
ref-cast = { version = "1.0.6", default-features = false }
serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
thiserror = { version = "1.0.30", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = [ "sync", "time" ] }
tokio-stream = { version = "0.1.7", default-features = false, features = [ "time" ] }

[dev-dependencies]
bee-storage-null = { version = "0.1.0", path = "../bee-storage/bee-storage-null", default-features = false }
bee-test = { path = "../bee-test", default-features = false }

criterion = { version = "0.3.5", default-features = false, features = [ "async_tokio" ] }
rand = { version = "0.8.4", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = [ "rt", "rt-multi-thread", "sync", "time" ] }

[[bench]]
name = "tangle_bench"
harness = false
