[package]
name = "bee-tangle"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "A distributed, directed, acyclic graph that underpins the DLT for IOTA's Bee node"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bee-block = { version = "1.0.0-beta.2", path = "../bee-block", default-features = false, features = [ "serde", "rand" ] }
bee-ledger-types = { version = "1.0.0-beta.1", path = "../bee-ledger/bee-ledger-types", default-features = false, features = [ "rand" ], optional = true }
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false }
bee-storage = { version = "0.12.0", path = "../bee-storage/bee-storage", default-features = false }

async-trait = { version = "0.1.56", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
futures = { version = "0.3.21", default-features = false }
hashbrown = { version = "0.12.1", default-features = false, features = [ "raw", "ahash" ] }
log = { version = "0.4.17", default-features = false }
packable = { version = "0.5.0", default-features = false, features = [ "serde" ] }
rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
ref-cast = { version = "1.0.7", default-features = false }
serde = { version = "1.0.137", default-features = false, features = [ "derive" ] }
thiserror = { version = "1.0.31", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [ "sync", "time" ] }
tokio-stream = { version = "0.1.9", default-features = false, features = [ "time" ] }

[dev-dependencies]
bee-storage-null = { version = "0.3.0", path = "../bee-storage/bee-storage-null", default-features = false }
bee-test = { path = "../bee-test", default-features = false }

criterion = { version = "0.3.5", default-features = false, features = [ "async_tokio" ] }
rand = { version = "0.8.5", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [ "rt", "rt-multi-thread", "sync", "time" ] }

[features]
rand = [ "dep:bee-ledger-types" ]

[[bench]]
name = "tangle_bench"
harness = false
