[package]
name = "bee-tangle"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "A distributed, directed, acyclic graph that underpins the DLT for IOTA's Bee node"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bee-block = { version = "1.0.0-beta.6", path = "../bee-block", default-features = false, features = [ "serde" ] }
bee-runtime = { version = "1.0.0-beta.1", path = "../bee-runtime", default-features = false }
bee-storage = { version = "1.0.0-beta.1", path = "../bee-storage/bee-storage", default-features = false }

async-trait = { version = "0.1.57", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
futures = { version = "0.3.21", default-features = false }
hashbrown = { version = "0.12.1", default-features = false, features = [ "raw", "ahash" ] }
log = { version = "0.4.17", default-features = false }
packable = { git = "https://github.com/pvdrz/common-rs", rev = "65db6f4a83742f43dae68ac004cadb0416df8929", default-features = false, features = [ "serde" ] }
rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
ref-cast = { version = "1.0.9", default-features = false }
serde = { version = "1.0.143", default-features = false, features = [ "derive" ] }
thiserror = { version = "1.0.32", default-features = false }
tokio = { version = "1.20.1", default-features = false, features = [ "sync", "time" ] }
tokio-stream = { version = "0.1.9", default-features = false, features = [ "time" ] }

[dev-dependencies]
bee-storage-null = { version = "0.3.0", path = "../bee-storage/bee-storage-null", default-features = false }

criterion = { version = "0.3.6", default-features = false, features = [ "async_tokio" ] }
rand = { version = "0.8.5", default-features = false }
tokio = { version = "1.20.1", default-features = false, features = [ "rt", "rt-multi-thread", "sync", "time" ] }

[features]
rand = [ "bee-block/rand" ]

[[bench]]
name = "tangle_bench"
harness = false
