[package]
name = "bee-ternary"
version = "0.5.2"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Ergonomic ternary manipulation utilities"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "ternary" ]
homepage = "https://www.iota.org"

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.130", default-features = false, optional = true }

[build-dependencies]
autocfg = { version = "1.0.0", default-features = false }

[features]
serde1 = [ "serde" ]
std = [ ]
