[package]
name = "bee-test"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Test utilities and feature tests for bee"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "test" ]
homepage = "https://www.iota.org"

[dependencies]
bee-block = { version = "1.0.0-beta.1", path = "../bee-block", default-features = false }
bee-ledger = { version = "0.7.0", path = "../bee-ledger/bee-ledger", default-features = false }
bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ] }

bytemuck = { version = "1.9.1", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = [ "serde" ] }
rand = { version = "0.8.5", default-features = false, features = [ "min_const_gen" ] }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_json = { version = "1.0.81", default-features = false, features = [ "alloc" ] }
