[package]
name = "bee-test"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Test utilities and feature tests for bee"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "test" ]
homepage = "https://www.iota.org"

[dependencies]
bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ] }

rand = { version = "0.8.5", default-features = false, features = [ "min_const_gen" ] }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.143", default-features = false }
serde_json = { version = "1.0.83", default-features = false, features = [ "alloc" ] }
