[package]
name = "bee-trace-attributes"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.30", default-features = false }
quote = { version = "1.0.10", default-features = false }
syn = { version = "1.0.80", default-features = false, features = [ "full", "extra-traits", "parsing", "printing", "derive", "proc-macro", "clone-impls" ] }

[dev-dependencies]
bee-trace = { path = "../bee-trace" }

tokio = { version = "1.13", features = [ "full", "rt-multi-thread", "tracing" ] }
tracing = { version = "0.1.26", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = [ "futures-01", "futures-03", "std", "std-future", "tokio" ] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = [ "ansi", "fmt", "parking_lot", "registry" ] }
