[package]
name = "bee-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
bee-common = { path = "../bee-common/bee-common" }
bee-trace-attributes = { path = "../bee-trace-attributes" }

colored = { version = "2.0.0", default-features = false }
console-subscriber = { git = "https://github.com/tokio-rs/console.git", default-features = false }
inferno = { version = "0.10.6", default-features = false }
lazy_static = "1.4.0"
log = { version = "0.4.14", default-features = false }
parking_lot = { version = "0.11.2", default-features = false }
tracing = { version = "0.1.26", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = [ "futures-01", "futures-03", "std", "std-future", "tokio" ] }
tracing-log = { version = "0.1.2", default-features = false, features = [ "log-tracer", "std" ] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = [ "ansi", "fmt", "parking_lot", "registry" ] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.13", features = [ "full", "rt", "tracing" ] }
