[package]
name = "bee-trim"
version = "0.1.0"
authors = ["IOTA Foundation"]
edition = "2018"

[dependencies]
bee-trinary = { path = "../bee-trinary" }
bee-transaction = { path = "../bee-transaction", features = ["constants"] }

[dev-dependencies]
bee-transaction = { path = "../bee-transaction", features = ["all"] }

[features]
default = ["all"]
all = ["trim_full", "trim_data"]
trim_full = []
trim_data = []
